2006-02-15  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* examples/simple/graphml.c, examples/simple/graphml.out,
	  examples/simple/test.gxl : added
	* src/foreign.c (igraph_read_graph_graphml) : added
	* src/igraph.h : header extended
	* src/error.h, src/error.c : IGRAPH_UNIMPLEMENTED error code added
	* configure.in : added tests for libxml2
	* src/Makefile.am : updated to link with libxml2 if necessary
	* src/structural_properties.c : get_all_shortest_paths bug
	  and memory leak fixed
	* interfaces/python/graphobject.c : added interface for
	  get_all_shortest_paths and igraph_read_graph_graphml
	* interfaces/python/test.py : added test case for
          get_all_shortest_paths, igraph_read_graph_pajek and
	  igraph_read_graph_graphml

2006-02-13  Gabor Csardi  <csardi@szaffi.rmki.kfki.hu>

	* src/igraph_grid.c (igraph_2dgrid_next_nei) : bug hunted
	* src/visitors.c (igraph_bfs) : bug for unconnected graphs hunted
	* src/layout.c (igraph_layout_fruchterman_reingold_3d) : corrected
	* src/random.h (RNG_UNIF) : small bug corrected

2006-02-12  Gabor Csardi  <csardi@szaffi.rmki.kfki.hu>

	* src/motifs.c (igraph_motifs_randesu_estimate) : added
	* src/topology.c (igraph_isoclass_create) : added

2006-02-11  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/visitors.c (igraph_bfs) : fixed memory leaks
	* src/layout.c (igraph_lgl) : fixed memory leaks
	* src/components.c (igraph_decompose) : fixed memory leaks
	* Makefile.am : don't try to call test.sh in interfaces/R
	* interfaces/python/test.py : added new test cases
	* interfaces/python/graphobject.c,
	  interfaces/python/graphobject.h : added wrappers for 3D layouts,
	  igraph_decompose, igraph_write_pajek, igraph_layout_lgl,
	  igraph_layout_grid_fruchterman_reingold
	  
2006-02-10  Gabor Csardi  <csardi@szaffi.rmki.kfki.hu>

	* src/igraph.h (igraph_progress_handler_t) : added
	* src/progress.c (igraph_progress, igraph_progress_handler_stderr)
	(igraph_set_progress_handler) : added
