@@ -1,3 +1,8 @@
+2006-02-20  Gabor Csardi  <csardi@szaffi.rmki.kfki.hu>
+
+	* src/foreign.c (igraph_write_graph_lgl) : error handling bug 
+	hunted
+
 2006-02-15  Tamas Nepusz  <ntamas@rmki.kfki.hu>
 
 	* examples/simple/graphml.c, examples/simple/graphml.out,
